# game-engine

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  chatGPT.md  checklist.md
assets/models/: character_placeholder.glb  map_test.gltf
cmake/: dependencies.cmake
docs/: controle_por_variaveis.md
engine/: CMakeLists.txt
engine/asset/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.h  gltf_loader_impl.cpp  model.cpp  model.h  obj_loader.cpp  obj_loader.h
engine/core/: CMakeLists.txt  config.h  log.cpp  log.h  path_utils.cpp  path_utils.h
engine/game/: CMakeLists.txt  game_object.cpp  game_object.h  player_character.cpp  player_character.h
engine/geometry/: CMakeLists.txt  grid.cpp  grid.h  sphere.cpp  sphere.h
engine/input/: CMakeLists.txt  input_manager.cpp  input_manager.h
engine/render/: CMakeLists.txt  grid_renderer.cpp  grid_renderer.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/render/camera/: CMakeLists.txt  free_camera.cpp  free_camera.h  icamera.h  orbit_camera.cpp  orbit_camera.h
engine/shaders/: basic.frag  basic.vert
engine/ui/: CMakeLists.txt
engine/window/: CMakeLists.txt  window.cpp  window.h
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h  input.cpp  input.h  scene.cpp  scene.h  setup_glfw.cpp  setup_glfw.h
tests/: temp_test.cpp
